String to Long,use .toLong()